<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:nestedScrollingEnabled="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_field_title"
        android:id="@+id/pinTextView"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/pinEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/pinEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <RelativeLayout
        android:id="@+id/confirmPinFields"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/pinEditText"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pin_field_title"
            android:id="@+id/confirmPinTextView"
            android:textSize="20sp"
            android:layout_alignBottom="@+id/confirmPinEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/confirmPinEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/confirmPinTextView"
            android:layout_toEndOf="@+id/confirmPinTextView"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/oldPinFields"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/confirmPinFields"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_pin_field_title"
            android:id="@+id/oldPinTextView"
            android:textSize="20sp"
            android:layout_alignBottom="@+id/oldPinEditText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/oldPinEditText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ssids_field_title"
        android:id="@+id/ssidsTextView"
        android:textSize="20sp"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/oldPinFields"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ssids"
        android:lines="5"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/ssidsTextView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button"
        android:onClick="saveConfiguration"
        android:layout_below="@+id/ssids"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>
